<resources>
    <string name="app_name">ShaktiSetu</string>
<string name="default_web_client_id">933736652914-bnl3knmdlikn0rbe8p2d8mbttrkj2i13.apps.googleusercontent.com</string>

    <string name="agree_to_terms">I agree to Terms &amp; Conditions</string>
<string name="sign_in_title">Shakti Setu</string>
    <string name="tagline">A Bridge to Safety</string>
    <string name="login_account_subtitle">Login into account</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="continue_button">CONTINUE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account? Sign Up</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="terms_privacy_agreement">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
<string name="create_account_title">ShaktiSetu</string>
    <string name="create_account_subtitle">Create account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="terms_agreement_prefix">I agree to </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="already_have_account">Already have an account? Sign In</string>
<string name="profile_completeness">Profile Completeness</string>
    <string name="progress_text_format">%1$d%% Complete</string>
    <string name="notifications">Notifications</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="no_notifications">No new notifications</string>
    <string name="version_text">App Version 1.0.0</string>
    <string name="check_for_updates">Check for Updates</string>
</resources>