<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <!-- Logo Title -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <!-- Ambient glow -->
            <View
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_logo_glow"/>

            <!-- Text logo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_title"
                android:textSize="76sp"
                android:fontFamily="@font/bdscript_regular"
                android:textColor="@color/text_brand"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:shadowColor="#30FFB6C8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="12"/>

            <TextView
                android:id="@+id/tvTagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/tagline"
                android:textColor="@color/text_brand"
                android:letterSpacing="0.6"
                android:textSize="15sp"

                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        </FrameLayout>

<!--    <TextView-->
<!--        android:id="@+id/tvTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/sign_in_title"-->
<!--        android:textSize="76sp"-->
<!--        android:fontFamily="@font/bdscript_regular"-->
<!--        android:textColor="@color/text_brand"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="40dp"/>-->


    <!-- Tagline -->
<!--    <TextView-->
<!--        android:id="@+id/tvTagline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/tagline"-->
<!--        android:textSize="15sp"-->
<!--        android:textColor="@color/text_brand"-->
<!--        android:fontFamily="@font/inter_semibold"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvTitle"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="4dp" -->
<!--        android:layout_gravity="center_horizontal"/>-->

        <!-- Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account_subtitle"
            android:textSize="30sp"

            android:textColor="@color/text_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="-0.01"/>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="0.94"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

    </com.google.android.material.textfield.TextInputLayout>


        <!-- Email Input -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/email_hint"
            android:background="@drawable/rounded_input"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:alpha="0.94"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"/>

        <!-- Password Input -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/rounded_input"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:alpha="0.94"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"/>

    <!-- Continue Button -->
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_white"
            android:background="@drawable/bg_primary_button"
            app:backgroundTint="@null"
            android:elevation="4dp"
            android:letterSpacing="0.03"
            android:layout_marginTop="8dp"/>

    <!-- Forgot Password -->

        <!-- Google Button -->


    <!-- Bottom Terms -->

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/text_brand"
            android:textSize="17sp"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="@id/btnContinue"
            app:layout_constraintTop_toBottomOf="@id/btnContinue" />

        <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        android:textColor="@color/text_brand"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/tvForgot" />




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/google_sign_in"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconSize="25dp"
            app:iconTint="@null"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvSignup"/>



<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnGoogle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/google_sign_in"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/text_primary"-->
<!--            app:backgroundTint="@color/surface_card"-->
<!--            app:cornerRadius="12dp"-->
<!--            app:icon="@drawable/ic_google"-->
<!--            app:iconGravity="textStart"-->
<!--            app:iconPadding="12dp"-->
<!--            app:iconSize="25dp"-->
<!--            app:iconTint="@null"-->
<!--            app:layout_constraintEnd_toEndOf="@id/btnContinue"-->
<!--            app:layout_constraintStart_toStartOf="@id/btnContinue"-->
<!--            app:layout_constraintTop_toBottomOf="@id/cbTerms" />-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btnPhone"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="Continue with Phone"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="#000000"-->
<!--        app:backgroundTint="#FFFFFF"-->
<!--        app:cornerRadius="12dp"-->
<!--        app:layout_constraintEnd_toEndOf="@id/btnGoogle"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="@id/btnGoogle"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btnGoogle"-->
<!--        app:icon="@drawable/ic_phone"-->
<!--        app:iconGravity="textStart"-->
<!--        app:iconPadding="12dp"-->
<!--        app:iconTint="@null"/>-->

        <!-- Loading Overlay -->

<!--        <TextView-->
<!--            android:id="@+id/tvTerms"-->
<!--            android:layout_width="349dp"-->
<!--            android:layout_height="53dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginBottom="28dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/terms_privacy_agreement"-->
<!--            android:textColor="@color/text_brand"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="@id/btnGoogle"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tvSignup"-->
<!--            app:layout_constraintVertical_bias="0.961" />-->

        <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/text_brand"/>
    </FrameLayout>

    </LinearLayout>

</ScrollView>